[project]
name = "hledger-server"
version = "0.1.0"
description = "Hledger iOS app server"
authors = [
    {name = "Corentin Chapellier", email = "corentin.chapellier@gmail.com"},
]
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "pydantic>=2.13.1",
    "brotli-asgi>=1.6.0",
    "authlib>=1.3.0",
    "httpx>=0.25.0",
    "pygithub>=2.1.1",
    "gitpython>=3.1.40",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "fastapi-analytics>=1.2.5",
    "pyjwt>=2.8.0"
]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
start-static = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
